syntax = "proto3";
option go_package = "se/grpcapi";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message VitalSign {
  uint64 ID = 1;
  google.protobuf.Timestamp Time = 2;
  double Temperature = 3;
  uint64 HeartRate = 4;
  string BloodPressure = 5;
  uint64 BreathingRate = 6;
  double BloodOxygen = 7;
  string Sense = 8;
}

message CallRequest { uint64 BedID = 1; }

service VitalSignService {
  rpc PushVitalSign(stream VitalSign) returns (google.protobuf.Empty);
  rpc Call(CallRequest) returns (google.protobuf.Empty);
}

message BellRequest { uint64 DepartmentID = 1; }
message BellResponse { uint64 BedID = 1; }

service BellService {
  rpc BellStream(BellRequest) returns (stream BellResponse);
}
